--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http:
   smooth_page_indicator:
   google_fonts:
+  flutter_native_splash: ^2.3.13
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - images/logo
+    - images/OnBoarding
     - icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
