--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_native_splash: ^2.3.13
   intl: ^0.19.0
   carousel_slider:
+  cached_network_image: ^3.3.1
 
   # State Management
   get:
